# uget

./: Cargo.toml  README.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: code-coverage.yml  release.yml  rust.yml
.samoyed/: pre-commit
docs/: _config.yml  index.md  llms.txt
src/: main.rs
src/tests/: get.rs  post.rs
wix/: main.wxs
