[package]
name = "uget"
version = "0.1.5"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/uget"
homepage = "https://ararog.github.io/uget"
description = "A minimal cli tool to make http requests. You want, you get!"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "client", "fetch", "rest"]
publish = true
rust-version = "1.70.0"

[package.metadata.wix]
upgrade-guid = "17814438-FF90-4394-8ABD-98DA4923CAB7"
path-guid = "04B654F3-7BD9-4F46-92DA-128844158CAE"
license = false
eula = false

[dependencies]
assert_cmd = "2.1.1"
clap = { version = "4.5.51", features = ["derive", "std"], default-features = false}
colored = "2.2.0"
colored_json = "5.0.0"
deboa = { version = "0.0.7" }
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
indicatif = "0.18.0"
mime = "0.3.17"
tokio = { version = "1.47.2", features = ["rt-multi-thread"], default-features = false }
url = "2.5.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"