[package]
name = "uget"
version = "0.1.7"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/uget"
homepage = "https://ararog.github.io/uget"
description = "A minimal cli tool to make http requests. You want, you get!"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "client", "fetch", "rest"]
publish = true
rust-version = "1.75.0"

[package.metadata.wix]
upgrade-guid = "17814438-FF90-4394-8ABD-98DA4923CAB7"
path-guid = "04B654F3-7BD9-4F46-92DA-128844158CAE"
license = false
eula = false

[features]
default = ["http3", "rust-tls"]

rust-tls = ["deboa-tokio/rust-tls", "deboa-tokio/default-rustls-provider", "deboa-tokio/default-rustls-verifier"]
native-tls = ["deboa-tokio/native-tls"]

http1 = ["deboa-tokio/http1"]
http2 = ["deboa-tokio/http2"]
http3 = ["deboa-tokio/http3"]

[dependencies]
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive", "std"], default-features = false}
colored = "3.1.1"
colored_json = "5.0.0"
deboa = { version = "0.1.0-beta.19", default-features = false }
deboa-tokio = { version = "0.1.0-beta.7", optional = true, default-features = false }
futures-util = "0.3.31"
http = "1.4.1"
http-body-util = "0.1.3"
indicatif = "0.18.4"
mime = "0.3.17"
tokio = { version = "1.52.3", features = ["rt-multi-thread"], default-features = false }
url = "2.5.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
